[metadata]
name = yx
version = 0.0.8
url = https://github.com/t-c-w/yx
platforms = any
description_file = README.md
description = Dataframe manipulation tools
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = yx

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	pandas
